# hyperium

./: .gitignore  CMakeLists.txt  README.md
Source/: Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoundSeed.cpp  SoundSeed.h
Source/dsp/: WavetableOscillator.h
docs/: ARCHITECTURE.md  BUILD.md  DESIGN_SYSTEM.md  INTERACTION_FLOWS.md  MVP_BACKLOG.md  PARAMETERS.md  PRODUCT_SPEC.md  ROADMAP.md  SOUND_SEEDS.md  UI_UX_SPEC.md
prototype/: app.js  index.html  styles.css
